--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -330,6 +330,10 @@ form.gdpr-accept {
 .image-presentation {
   .slide-link {
     cursor: default;
+
+    &:hover img {
+      filter: none;
+    }
   }
 
   .slick-slide {
