--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -369,53 +369,53 @@
       margin: 0 0 6px;
     }
 
-    &.faculty_color {
-      background: @ku-red;
-      color: @white-color;
-      @media (min-width: @screen-sm) {
-        background: fade(@ku-red, 93%);
-      }
-
-      &.full-bg {
-        background: @ku-red;
-      }
-    }
-
-    &.subcolor_5 {
-      background: @ku-gray;
-      color: @text-color;
-      @media (min-width: @screen-sm) {
-        background: fade(@ku-gray, 90%);
-      }
-
-      &.full-bg {
-        background: @ku-gray;
-      }
-    }
-
-    &.subcolor_6 {
-      background: @gray-f5;
-      color: @text-color;
-      @media (min-width: @screen-sm) {
-        background: fade(@white-color, 90%);
-      }
-
-      &.full-bg {
-        background: @gray-f5;
-      }
-    }
-
-    &.subcolor_7 {
-      background: @brown;
-      color: @white-color;
-      @media (min-width: @screen-sm) {
-        background: fade(@brown, 83%);
-      }
-
-      &.full-bg {
-        background: @brown;
-      }
-    }
+    // &.faculty_color {
+    //   background: @ku-red;
+    //   color: @white-color;
+    //   @media (min-width: @screen-sm) {
+    //     background: fade(@ku-red, 93%);
+    //   }
+    //
+    //   &.full-bg {
+    //     background: @ku-red;
+    //   }
+    // }
+    //
+    // &.subcolor_5 {
+    //   background: @ku-gray;
+    //   color: @text-color;
+    //   @media (min-width: @screen-sm) {
+    //     background: fade(@ku-gray, 90%);
+    //   }
+    //
+    //   &.full-bg {
+    //     background: @ku-gray;
+    //   }
+    // }
+    //
+    // &.subcolor_6 {
+    //   background: @gray-f5;
+    //   color: @text-color;
+    //   @media (min-width: @screen-sm) {
+    //     background: fade(@white-color, 90%);
+    //   }
+    //
+    //   &.full-bg {
+    //     background: @gray-f5;
+    //   }
+    // }
+    //
+    // &.subcolor_7 {
+    //   background: @brown;
+    //   color: @white-color;
+    //   @media (min-width: @screen-sm) {
+    //     background: fade(@brown, 83%);
+    //   }
+    //
+    //   &.full-bg {
+    //     background: @brown;
+    //   }
+    // }
 
     &.box {
       &-red1 {
